@@ -95,7 +95,7 @@
 		<library>libxml-parser-perl</library>
 		<library>libxml-simple-perl</library>
 		<library>libemail-simple-perl</library>
-        <library>libjson-perl</library>
+		<library>libjson-perl</library>
 	</perl>
 	<other>bash</other>
     <other>pbzip2</other>
